--- a/Rapport_BIF7105.Rmd
+++ b/Rapport_BIF7105.Rmd
@@ -13,6 +13,11 @@ csl: vancouver.csl
 link-citations: true
 toc-title: "Table des matières"
 ---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+options(width=100)
+```
   
 <!-- 
 Révision critique d'un outil bioinformatique (ou package R): description de 
@@ -61,21 +66,31 @@ library(limma)
 library(edgeR)
 ```
 
-data taken from: https://www.doi.org
+Les données sont téléchargées du [**DOI**](https://doi.org/10.1371/journal.pone.0009317.s009) (*the Digital Object Identifier*).
+<!-- Les gènes de ces données sont identifiés par leurs « *Entrez Gene ID* », les identifiants numériques uniques attribués aux gènes par le NCBI [@EntrezGeneID]. -->
+Avant de lire les données, nous avons supprimé les colonnes qui n'étaient pas 
+pertinentes pour notre étude. Nous avons également renommé certaines colonnes 
+(`idRefSeq` à `RefSeqID`, `nameOfGene` à `Symbol`, `numberOfExons` à `NbrOfExons`).
 ```{r}
 rawdata <- read.delim("TableS1.txt", check.names = FALSE, stringsAsFactors = FALSE)
-head(rawdata)
+head(rawdata, 3)
 ```
 
-## Création d'un *DGEList object*
+## Création d'un objet *DGEList*
 
-* create a DGEList object (https://www.rdocumentation.org/packages/edgeR/versions/3.14.0/topics/DGEList) to hold our read counts 
-- This object is used as a container for the counts, and for all the associated metadata eg. sample names, gene names and normalisation factors
+Un objet *DGEList* est un conteneur pour les *RNA-seq counts* et toutes les 
+métadonnées associées [@DGEList]. Nous stockerons nos données dans un 
+objet *DGEList* pour faciliter leur manipulation.
+
 ```{r}
-y <- DGEList(counts=rawdata[,4:9], genes=rawdata[,1:3])
+y <- DGEList(counts = rawdata[,4:9], genes = rawdata[,1:3])
 ```
 
 ## Annotation
+L'étude [@oralCarcinoma] a été réalisée en 2010 ; par conséquent, tous les `RefSeqID`s
+ne sont plus utilisés actuellement. Nous n'utiliserons que les *RefSeq transcripts* qui 
+possèdent des *ID*s dans l'annotation [**NCBI**](https://www.ncbi.nlm.nih.gov) actuelle 
+(fournie par le package org.Hs.eg.db). 
 
 ```{r}
 idfound <- y$genes$RefSeqID %in% mappedRkeys(org.Hs.egREFSEQ)
@@ -83,22 +98,29 @@ y <- y[idfound,]
 dim(y)
 ```
 
+Les *Entrez Gene ID*s sont les identifiants numériques uniques attribués aux 
+gènes par le NCBI [@EntrezGeneID]. Nous ajoutons les *Entrez Gene ID*s 
+correspondants à l'annotation. 
 ```{r}
 egREFSEQ <- toTable(org.Hs.egREFSEQ)
-head(egREFSEQ)
+head(egREFSEQ, 3)
 m <- match(y$genes$RefSeqID, egREFSEQ$accession)
 y$genes$EntrezGene <- egREFSEQ$gene_id[m]
 ```
 
+Ensuite, nous mettons à jour `Symbol` en utilisant les *Entrez Gene ID*s.
 ```{r}
 egSYMBOL <- toTable(org.Hs.egSYMBOL)
-head(egSYMBOL)
+head(egSYMBOL, 3)
 m <- match(y$genes$EntrezGene, egSYMBOL$gene_id)
 y$genes$Symbol <- egSYMBOL$symbol[m]
-head(y$genes)
+head(y$genes, 3)
 ```
 
 ## Filtrage des gènes 
+Les différents *RefSeq transcript*s associés au même *gene symbol* présentent 
+majoritairement les mêmes *reads*.
+Nous ne conserverons qu'un seul *RefSeq transcript* (celui avec le *count* le plus élevé) pour chaque gène.
 ```{r}
 o <- order(rowSums(y$counts))
 y <- y[o,]
@@ -107,16 +129,22 @@ y <- y[!d,]
 nrow(y)
 ```
 
+Ensuite, nous recalculons la taille du `library`.
 ```{r}
 y$samples$lib.size <- colSums(y$counts)
 ```
 
+Et nous utilisons les *Entrez Gene ID*s comme les noms de lignes.
 ```{r}
 rownames(y$counts) <- rownames(y$genes) <- y$genes$EntrezGene
 y$genes$EntrezGene <- NULL
 ```
 
 ## Normalisation
+La normalisation permet d'éliminer les effets techniques présents dans 
+les données afin de minimiser l'impact des biais techniques sur les résultats [@TMM1; @TMM2]. 
+Nous utilisons la fonction `normLibSizes()` qui utilise la normalisation *TMM* (*trimmed mean of M-values*) 
+pour tenir compte des différences de composition entre les *libraries*.
 
 ```{r}
 y <- normLibSizes(y)
@@ -128,7 +156,8 @@ y$samples
 Résultats et discussions (2 à 3 pages)
 -->
 
-## Data exploration
+## Analyse des données
+
 ```{r}
 plotMDS(y)
 ```
@@ -145,7 +174,7 @@ design
 ```
 
 ## Dispersion Estimation
-```{r}
+```{r fig.width = 4, fig.height = 4}
 y <- estimateDisp(y, design, robust=TRUE)
 y$common.dispersion
 
@@ -157,7 +186,7 @@ plotBCV(y)
 fit <- glmFit(y, design)
 ```
 
-```{r}
+```{r fig.width = 3, fig.height = 4}
 lrt <- glmLRT(fit)
 topTags(lrt)
 ```
