--- a/references.bib
+++ b/references.bib
@@ -16,16 +16,65 @@
 
 @Manual{edgeRInfo,
   title        = {edgeR: a Bioconductor package for differential expression analysis of digital gene expression data.},
-  author       = {Robinson MD, McCarthy DJ, Smyth GK.},
+  author       = {Mark D Robinson and Davis J McCarthy and Gordon K Smyth},
   year         = {2009},
   note         = {},
   url          = {https://pmc.ncbi.nlm.nih.gov/articles/PMC2796818/}
 }
 
 @Manual{EntrezGeneID,
-  title        = { Entrez Gene: gene-centered information at NCBI},
-  author       = {Maglott D, Ostell J, Pruitt KD, Tatusova T.},
+  title        = {Entrez Gene: gene-centered information at NCBI},
+  author       = {Donna Maglott and Jim Ostell and Kim D Pruitt and Tatiana Tatusova},
   year         = {2007},
-  note         = {Nucleic Acids Research.},
+  note         = {Nucleic Acids Research},
   url          = {https://pmc.ncbi.nlm.nih.gov/articles/PMC1761442/}
 }
+
+@Manual{oralCarcinoma,
+  title        = {Tumor Transcriptome Sequencing Reveals Allelic Expression Imbalances Associated with Copy Number Alterations},
+  author       = {Brian B. Tuch and Rebecca R. Laborde and Xing Xu and Jian Gu and Christina B. Chung and Cinna K. Monighetti and Sarah J. Stanley and Kerry D. Olsen and Jan L. Kasperbauer and Eric J. Moore and Adam J. Broomer and Ruoying Tan and Pius M. Brzoska and Matthew W. Muller and Asim S. Siddiqui and Yan W. Asmann and Yongming Sun and Scott Kuersten and Melissa A. Barker and Francisco M. De La Vega and David I. Smith},
+  year         = {2010},
+  note         = {},
+  url          = {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0009317#abstract0}
+}
+
+@Manual{edgeRCaseStudies,
+  title        = {Diﬀerential Expression Analysis using edgeR},
+  author       = {Mark Dunning and Bernard Pereira and Oscar Rueda and Ines De Santiago and Shamith Samarajiwa},
+  year         = {2015},
+  note         = {examples taken from the edgeR User’s Guide, First edition 17 September 2008},
+  url          = {https://bioinformatics-core-shared-training.github.io/cruk-bioinf-sschool/Day3/Supplementary-RNAseq-practical.pdf}
+}
+
+@Manual{DGEList,
+  title        = {DGEList: DGEList Constructor},
+  author       = {},
+  year         = {2025},
+  note         = {},
+  url          = {https://www.rdocumentation.org/packages/edgeR/versions/3.14.0/topics/DGEList}
+}
+
+@Manual{TMM1,
+  title        = {A scaling normalization method for differential expression analysis of RNA-seq data},
+  author       = {Mark D Robinson and Alicia Oshlack},
+  year         = {2010},
+  note         = {},
+  url          = {https://pmc.ncbi.nlm.nih.gov/articles/PMC2864565/}
+}
+
+@Manual{TMM2,
+  title        = {Normalization of RNA-Seq data using adaptive trimmed mean with multi-reference},
+  author       = {Vikas Singh and Nikhil Kirtipal and Byeongsop Song and Sunjae Lee},
+  year         = {2024},
+  note         = {},
+  url          = {https://pmc.ncbi.nlm.nih.gov/articles/PMC11107385/#:~:text=Abstract,characteristic%20curve%20and%20differential%20expression.}
+}
+
+
+
+
+
+
+
+
+
