--- a/references.bib
+++ b/references.bib
@@ -78,6 +78,16 @@
   url          = {https://www.rdocumentation.org/packages/edgeR/versions/3.14.0/topics/plotMDS.DGEList}
 }
 
+@Manual{BCV,
+  title        = {SOME KEY FACTORS FOR NUMBER OF SIGNIFICANT DE GENES},
+  author       = {Quan Gu},
+  year         = {2015},
+  note         = {},
+  url          = {https://bioinformatics.cvr.ac.uk/some-key-factors-for-number-of-significant-de-genes/#:~:text=An%20important%20factor%20that%20influences,conditions%20than%20within%2C%20as%20expected.}
+}
+
+
+
 
 
 
